[metadata]
version = attr: dafne_dl.VERSION
author = Francesco Santini
author_email = francesco.santini@unibas.ch
description = Deep Learning module for Dafne
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dafne-imaging/dafne-dl
project_urls =
    Bug Tracker = https://github.com/dafne-imaging/dafne-dl/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = LGPL-3.0-or-later

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.cfg